--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">  
     </script>
+    <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
   </head>
   <body>
     <div id="root"></div>
